Fixed Certificate Description Color for Dark Mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -680,3 +680,14 @@ body.dark-mode .skills-categories .skill-box:nth-child(3) {
 body.dark-mode .skills-categories .skill-box:nth-child(4) {
   border-bottom-right-radius: 2rem;
 }
+
+body.dark-mode .cert-info h3 {
+  font-size: 1.1rem;
+  margin-top: 12px;
+  color: black;
+}
+
+body.darm-mode .cert-info p {
+  margin: 4px 0;
+  color: black;
+}
